force-app/main/default/objects/Learn_A__c/Learn_A__c.object-meta.xml
<CustomObject>
    <label>Learn A</label>
    <nameField>
        <label>Learn A Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Learn As</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>