force-app/main/default/objects/Learn_A__c/fields/Learn_C__c.field-meta.xml
<CustomField>
    <fullName>Learn_C__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learn C</label>
    <referenceTo>Learn_C__c</referenceTo>
    <relationshipLabel>Learn As</relationshipLabel>
    <relationshipName>Learn_As</relationshipName>
    <type>Lookup</type>
</CustomField>