force-app/main/default/objects/Learn_A__c/fields/Multi_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Multi_Picklist__c</fullName>
    <label>Multi Picklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pick X</fullName>
            </value>
            <value>
                <fullName>Pick Y</fullName>
            </value>
            <value>
                <fullName>Pick Z</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>