force-app/main/default/objects/Learn_A__c/fields/Picklist__c.field-meta.xml
<CustomField>
    <fullName>Picklist__c</fullName>
    <label>Picklist</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pick A</fullName>
                <default>true</default>
                <label>Pick A</label>
            </value>
            <value>
                <fullName>Pick B</fullName>
            </value>
            <value>
                <fullName>Pick C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>