force-app/main/default/objects/Learn_A__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>Time</label>
    <type>DateTime</type>
</CustomField>